--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
       <div class="foot-col">
         <article class="newsletter">
           <h3>NEWSLETTER</h3>
-          <form class="" action="index.html" method="post">
+          <form action="index.html" method="post">
             <p>Sign up to access all advantages, such as notifications, Artist Meet Ups and master classes near you, discounts, and a chance to be featured in the Newsletter!</p>
             <input type="text" class="footer-email" placeholder="Email">
             <br><input type="checkbox" name="Agree"><span class="foot-span">I have read and agree to the terms and conditions.</span>
